--- a/html_css/simple_website/index.html
+++ b/html_css/simple_website/index.html
@@ -8,13 +8,58 @@
 </head>
 <body>
     <header>
-        <h1>Willkommen aud der Webseite</h1>
+        <h1>Willkommen auf der Webseite</h1>
+        <h2>Hallo meine Name ist Gabriel</h2>
+        <p>Willkommen auf der Webseite Noch mal</p>
     </header>
+    <!-- Menu -->
+    <center> 
+    
+        <nav style="background: rgb(173, 233, 221); padding: 10px; text-align: center; font-size:16px;">
+            <a style="color:white;margin-right:20px;" href="javascript:alert('Home was clicked')">Home</a>
+            <a style="color:white;margin-right:20px;" href="C:\Users\gabri\github\simple-web\service.html">Service</a>
+            <a style="color:white;margin-right:20px;" href="C:\Users\gabri\github\simple-web\contatc.html">Contact Us</a>
+            <a style="color:white;margin-right:20px;" href="C:\Users\gabri\github\simple-web\about.html">About Us</a>
+          </nav>
+    </center>
+
     <section>
         <p>Moin Moin von unserer einfache website</p>
         <div class="box">
             <p>Gestylte Box Box</p>
+            <img src="C:\Users\gabri\github\simple-web\html_css\Screenshot 2024-01-12 001204.png" alt="Italian Trulli">
         </div>
     </section>
+    <table>
+        <tr>
+          <th>EMPRESA</th>
+          <th>CONTACTO</th>
+          <th>PAIS</th>
+        </tr>
+        <tr>
+          <td>Alfreds Futterkiste</td>
+          <td>Maria Anders</td>
+          <td>Germany</td>
+        </tr>
+        <tr>
+          <td>Centro comercial Moctezuma</td>
+          <td>Francisco Chang</td>
+          <td>Mexico</td>
+        </tr>
+        <tr>
+            <td> </td>
+            <td> </td>
+            <td> </td>
+          </tr>
+      </table>
+    <!-- Formulario  -->
+    <center> 
+      <form>
+        <label for="fname">First name:</label><br>
+        <input type="text" id="fname" name="fname"><br>
+        <label for="lname">Last name:</label><br>
+        <input type="text" id="lname" name="lname">
+      </form>
+    </center>
 </body>
 </html>
